# spln-2223

./: verb_ratios.py
TP1/: betclicScraped  futebol-s1.html  teste.py
TPC1/: dic.json  incomp  medicina.py  medicina.txt  output.xml  output2.xml  relatorio.md  tpc
TPC1/rascunhos/: medicina.ipynb
TPC2/: a  dic.json  exemplo.txt  exemploMaisSimples.txt  grammar.txt  medicina.py  myLex.py  myYacc.py  output.xml  parser.out  parsetab.py  relatorio.md  sort.md
TPC3/: exemplo.txt  myYacc.py  output.html  parsetab.py  relatorio.md
TPC4/: output.txt  relatorio.md  tokenizadorspln.py
TPC5/: relatorio.md  tpc.txt
TPC5/tokenizerSpln/: pyproject.toml
TPC5/tokenizerSpln/tokenizerSpln/: __init__.py  output.txt
TPC5/tokenizerSpln/tokenizerSpln/conf/: abrev.txt
TPC6/: e.xml  expresso-corpus.py  jn-corpus.py  jn.txt  relatorio.md
TPC6/artigos/2015_05_02/: Autores.xml
TPC6/artigos/2015_05_03/: Autores.xml
TPC6/artigos/2015_05_04/: Autores.xml
TPC6/artigos/2015_05_05/: Autores.xml
TPC6/artigos/2015_05_06/: Autores.xml
TPC6/artigos/2015_05_14/: Autores.xml
TPC6/artigos/2015_11_01/: Autores.xml
TPC6/artigos/2016_12_28/: Autores.xml
TPC6/artigos/2018_01_19/: Autores.xml
TPC6/artigos/2018_02_16/: Autores.xml
TPC6/artigos/2018_04_02/: Autores.xml
TPC6/artigos/2018_05_08/: Autores.xml
TPC6/artigos/2018_06_04/: Autores.xml
TPC6/artigos/2019_01_29/: Autores.xml
TPC6/artigos/2019_04_23/: Autores.xml
TPC6/artigos/2019_08_16/: Autores.xml
TPC6/artigos/2019_09_15/: Autores.xml
TPC6/artigos/2019_09_28/: Autores.xml
TPC7/: ex1.ipynb
(+69 files in other folders)
