[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tokenizerSpln"
authors = [{name = "yakari144", email = "pg50477@uminho.pt"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["spacy"]
readme = "README.md"

[project.scripts]
tok = "tokenizerSpln:main"
